data base and intents

--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -95,6 +95,10 @@
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+  <TextView
+      android:id="@+id/text_view_pets"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
 
 
 </android.support.constraint.ConstraintLayout>
